# learning-pygame

./: pyproject.toml  requirements.txt
middle_earth/: __main__.py  game.py
src/: __init__.py  events.py  game.py
