[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
dependencies = [
  "pygame ~= 2.6, >= 2.6.1",
]
description = ""
dynamic = ["version"]

[tool.ruff]
target-version = "py313"

[tool.setuptools.dynamic]
version = {attr = "src.__version__"}

[tool.setuptools.packages.find]
include = ["src*"]
